- set waybar's logout menu option command to "uwsm stop" instead of "hyprctl dispatch exit || swaymsg exit"
- set sway win+shift+e keybind to "uwsm stop" instead of "swaymsg exit"
- added evince and simple-scan to excluded packages for gnome
- add openvpn module
- add programs.remmina to nixos and home-manager


7-26-2025
- add modules.system-stylizer to nixos for automatic theming of sddm and grub based on the current desktop theme in home-manager
- add space-jelly to swww wallpaper slideshow for cosmos theme
- update flake to linux 6.15.8
- remove ghostty flake input
- set inputs.stylix.nur to follow inputs.nur, removing another copy of nixpkgs.


7-25-2025
- add nix lsp neovim to installer iso
- move swayidle options from services.swayidle.settings to services.swayidle
- add suspend option for hypridle
- set suspend timeout to 30 minutes by default for laptops
- reorganized personal profile set


7-12-2025
- update vim, lualine, lsp reconfiguration, and small keybind adjustments
- replace dunst with swaync for wayland sessions
- utilize mkMerge on more jankily written modules
- add default swaync profile with an option for smaller screens.
- integrate swaync into waybar


6-30-2025
- disable nm-applet for waybar due to severe crashes caused by it
- fixed swww.sh not finding systemctl
- added more flexibility to $XDG_CURRENT_DESKTOP for the Hyprland screenshot script to be compatible with jovian nixos


6-28-2025
- finally fixed the link opening issue in hyprland.


6-27-2025
- update flake to linux 6.15.3
- fix small issue with swww where it could not find systemctl in path


6-26-2025
- move sddm config to profiles


6-21-2025
- more V6 framework overhaul
- remove all dependence on "self" "inputs" and "outputs" for shared nixosModules.
- add extraSpecialArgs to mkHost and extraExtraSpecialArgs to mkHome.
- configurations can now append an undefined number of special arguements to their modules using mkHost and mkHome