@@ -1,6 +1,5 @@
 { ... }:
 {
-
   custom = {
     profiles.desktopTheme = "hollow-knight";
     editor = "codium";
